--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.4'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'checkstyle'
 }
 
 group = 'io.touchyongan'
@@ -19,6 +20,17 @@ configurations {
 	}
 }
 
+checkstyle {
+	toolVersion = '10.17.0'
+	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
+	configProperties = [
+			'suppressionsFile': file("${rootDir}/config/checkstyle/suppressions.xml").absolutePath
+	]
+	// Optional: Configure reports
+	showViolations = true // Display violations in console
+	ignoreFailures = false // Fail build on violations
+}
+
 repositories {
 	mavenCentral()
 }
@@ -26,6 +38,7 @@ repositories {
 ext {
 	mapstructVersion = '1.6.3'
 	jjwtVersion = '0.12.5'
+	apacheCommonVersion = '4.5.0'
 }
 
 dependencies {
@@ -47,6 +60,8 @@ dependencies {
 	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
 	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
 	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"
+
+	implementation "org.apache.commons:commons-collections4:${apacheCommonVersion}"
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
