Add sample config https

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 spring.application.name=springboot-starter-template
 
+# The alias mapped to the certificate
+server.ssl.key-alias=server-key
+server.ssl.enabled=${ENABLED_SSL:false}
+server.port=${SERVER_PORT:8443}
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=${SERVER_KEY_STORE_PATH:classpath:serverkey/server-keystore.p12}
+# The password used to generate the certificate
+server.ssl.key-store-password=${SERVER_KEY_STORE_PASSWORD:password}
+
 # Config database url
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/sample}
 spring.datasource.username=${DB_USERNAME:postgres}
